# floating-base-converter

./: .gitignore  CHANGELOG.md  DOCUMENTATION_STATUS.md  ENHANCEMENTS.md  LICENSE  MANIFEST.in  README.md  RELEASE_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TESTING_GUIDE.md  benchmark.py  benchmark_comparison.py  comprehensive_benchmark.py  demo_high_precision.py  demo_showcase.py  main.py  precision_analysis.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_tests.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
base_converter/: __init__.py  __main__.py  cli.py  converter.py  utils.py
benchmarks/: performance_benchmark.py
demos/: interactive_demo.py
docs/: COMPLEXITY_ANALYSIS.md  RELEASE_SUMMARY.md  TECHNICAL_DOCUMENTATION.md
tests/: __init__.py  manual_test.py  test_cli.py  test_converter.py  test_utils.py
validation/: validation_suite.py
