[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floating-base-converter"
version = "1.0.0"
description = "A high-precision Python package for converting floating-point numbers between different bases with scientific notation support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yeabwang", email = "wangxiayu@yeab.io"}
]
maintainers = [
    {name = "Yeabwang", email = "wangxiayu@yeab.io"}
]
keywords = [
    "base conversion",
    "floating point", 
    "binary",
    "octal",
    "hexadecimal",
    "decimal",
    "number systems"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/yeabwang/floating-base-converter"
Repository = "https://github.com/yeabwang/floating-base-converter"
Documentation = "https://github.com/yeabwang/floating-base-converter#readme"
Changelog = "https://github.com/yeabwang/floating-base-converter/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/yeabwang/floating-base-converter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "twine>=4.0",
    "build>=0.10",
]

[project.scripts]
base-converter = "base_converter.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=base_converter --cov-report=html --cov-report=term-missing --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["base_converter"]